fix: hide datalist down arrow on input on iOS

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,7 +18,7 @@
 	/* Remove the “datalist” drop-down arrow from inputs */
 	input[list]::-webkit-list-button,
 	input[list]::-webkit-calendar-picker-indicator {
-		@apply !hidden;
+		@apply !hidden opacity-0;
 	}
 
 	/* Remove the “x” icon from search inputs */
